refactor: List.of 형태로 변경
java 11 에 추가된 List.of 기능 사용